# vortex-engine

./: .gitattributes  .gitignore  CMakeLists.txt  imgui.ini  main.cpp
editor/: CMakeLists.txt
editor/src/vortex/imgui/: framebuffer.cpp  framebuffer.h  layer.cpp  layer.h
resources/: debug.frag  debug.vert  skybox.vert  triangle.frag  triangle.vert
vortex/: CMakeLists.txt  Makefile  cmake_install.cmake
vortex/include/vortex/glad/: glad.h
vortex/src/glad/: glad.c
vortex/src/vortex/matrix/: camera.cpp  camera.h
vortex/src/vortex/model/: mesh.cpp  mesh.h  model.cpp  model.h
vortex/src/vortex/rendering/: cubemap.cpp  cubemap.h  shader.cpp  shader.h  shadowMap.cpp  shadowMap.h  texture.cpp  texture.h
vortex/src/vortex/scene/: gameObject.h  material.h  scene.h  transform.h
